--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
+    "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
+    "expo-screen-orientation": "~4.1.1",
     "expo-status-bar": "~1.2.0",
+    "joi": "^17.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "^0.64.3",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
